# minesweeper

./: .gitignore  .pre-commit-config.yaml  Makefile  app.yaml  pyproject.toml  requirements.txt
.github/workflows/: pytest-ci.yml
app/: app.py
app/static/: styles.css
app/templates/: index.html
src/: minesweeper.py
tests/: test_minesweeper.py
