[project]
name = "minesweeper"
version = "0.1.0"
description = "minesweeper project"
authors = [
    {name = "Stanislav Grinchenko",email = "stasagr@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
